2011-01-18 karl
    * Version bump to 1.4.  Tagged 1.4 release.

2010-08-12 karl
    * Upgrade to Tcl Extension Architecture (TEA) 3.8.

2010-03-22 karl
    * Upgrade to Tcl Extension Architecture (TEA) 3.7.

2009-08-11 karl
    * Add new command, cptime, that uses the sysctl library call to get
      CPU time statistics.  Command takes an array name as an argument
      and will fill it with system, user, nice, interrupt, idle, and
      total clock counts.  Upon a second invocation with the same array
      as an argument, it will calculate the cpu time of the various
      elements as a percentage, returning those as key-value pairs and
      update the array with the latest sampled values.

    * Version bump to 1.3.

2009-07-28 karl
    * Update README.FreeBSD to reflect that --with-tclinclude is not needed
      and --with-mandir will put the manpage in a place where "man" will
      find it without changing MANPATH.  Update .gitignore to ignore *.o *.so.

2009-03-31 karl
    * Changes to make tclbsd work on Debian Linux.

2008-06-23 karl
    * sockbuf is not available on Mac OS X Leopard.  Have it be an error
      to try to get or set that value.

    * OS X uses termios rather than termio so fix the Makefile so it will
      build properly on OS X.

2008-05-27 karl
    * Add new rlimit-settable values for max virtual memory mapped ("virtual")
      and max socket buffer memory (mbufs, in bytes) ("sockbuf").

    * You can now specify "unlimited" as an argument to rlimit value setting
      options and tclbsd will substitute RLIM_INFINITY as the value.

    * Switched the data type of the variable that we use for limits from
      long to Tcl wide int, because rlim_t type is a 64 bit integer.

    * Got rid of intermediate value generation with sprintf -- just
      using standard Tcl functions like Tcl_NewWideIntObj instead.

    * Checking error returns in a couple places where we weren't.

2008-04-15 karl